# PyUniversityTimetable

./: pyproject.toml  setup.py
