[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "PyUniversityTimetable"
authors = [
    {name = "Stanislav Chubar", email = "schubar.krsk@icloud.com"},
    {name = "Anna Semenova", email = "asemenova@sfu-kras.ru"},
]
description = "Simple timetable manager for University"
readme = "README.rst"
requires-python = ">=3.6"
keywords = ["one", "two"]
license = {text = "GNU-GPL-V3"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
#    "requests",
#    'importlib-metadata; python_version<"3.8"',
]
dynamic = ["version"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]
#
#[project.scripts]
#my-script = "my_package.module:function"

# ... other project metadata fields as specified in:
#     https://packaging.python.org/en/latest/specifications/declaring-project-metadata/